<resources>
    <string name="app_name">Sports shop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_material_casual">Casual material</string>
    <string name="material_casual">Casual material</string>
    <string name="material_desportivo">Sporting Goods</string>
    <string name="roupa">Clothes</string>
    <string name="acess_rios">Accessories</string>
    <string name="cal_ado">Shoe</string>
    <string name="title_activity_roupa_casual">Casual clothing</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="nome_da_pe_a">Name of the piece:</string>
    <string name="escreva_aqui">Write here</string>
    <string name="meus_intens">My itens</string>
    <string name="nome">Name</string>
    <string name="tamanho">Size:</string>
    <string name="quantidade">Amount:</string>
    <string name="quantidadee">Amount</string>
    <string name="tamanhoo">Size</string>
    <string name="preco">Price:</string>
    <string name="precoo">Price</string>
    <string name="title_activity_meus_intens">My itens</string>
    <string name="todos_os_intens">All the intens:</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="title_activity_editar_intem">Edit</string>
    <string name="title_activity_eliminar">Delete</string>
    <string name="peca_alterada">Successfully altered part</string>
    <string name="peca_guardada">Part saved</string>
    <string name="escreva_algo">Write something</string>
    <string name="peca_eliminada">Delete piece</string>
    <string name="cancelado">Canceled</string>
    <string name="carregou_em_roupa">Upload  in clothes</string>
    <string name="carregou_em_material_casual">Loaded on casual material</string>
    <string name="carregou_para_ver_todos_os_intens">Loaded to see all intens</string>
    <string name="quantidade_invalida">Quantidade invalida</string>
    <string name="preco_invalido">Preço invalido</string>
    <string name="title_activity_material_casual_calcado">Material Casual Calçado</string>
    <string name="title_activity_material_casual_opcoes">MaterialCasualOpcoes</string>
    <string name="title_activity_material_desportivo_opcoes">MaterialDesportivoOpcoes</string>
    <string name="carregou_material_desportivo">carregou em material desportivo</string>
    <string name="inserir">Inserir</string>
    <string name="material_casuall">Material casual:</string>
    <string name="title_activity_material_casual_editar">Material Casual Editar</string>
    <string name="title_activity_material_casual_eliminar">MaterialCasualEliminar</string>
    <string name="categoria">Categoria</string>
    <string name="title_activity_pagina_categorias">Categorias</string>
    <string name="todas_as_categorias">Todas as categorias:</string>
    <string name="carregou_categorias">carregou em categorias</string>
    <string name="title_activity_inserir_categoria">Inserir Categoria</string>
    <string name="title_activity_editar_categoria">EditarCategoria</string>
    <string name="title_activity_eliminar_categoria">EliminarCategoria</string>
    <string name="nome_da_catgoria">Nome da catgoria:</string>
    <string name="categoria_guardada">Categoria Guardada</string>
</resources>
